--- a/src/components/journalListView.css
+++ b/src/components/journalListView.css
@@ -1,15 +1,43 @@
-.journalListView {
+.journalDate {
     border: 1px solid black;
-    padding: 15px;
-    width: 50%;
+    border-top: none;
+    width: 85%;
     margin: auto;
     text-align: center;
+    
 }
 
 h3 {
     display: inline-block;
 }
 
-i {
+.fa-plus {
     margin: 5px;
+    float: left;
+    transition: all .2s ease-in-out;
 }
+
+.fa-trash-alt {
+    margin: 5px;
+    float: right;
+    transition: all .2s ease-in-out;
+}
+
+.fa-edit {
+    margin: 5px;
+    float: right;
+    transition: all .2s ease-in-out;
+}
+
+#icon:hover {
+    transform: scale(1.1);
+}
+
+.listViewMenu {
+    width: 85%;
+    height: 2rem;
+    margin: auto;
+    border: 1px solid black;
+    background-color: turquoise;
+}
+
