--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,17 +1,17 @@
-ul {
+.nav {
     list-style-type: none;
     margin: 0;
     padding: 10px;
     overflow: hidden;
     background-color: #333;
+    color: white;
 }
 
-li {
+.nav li {
     display: inline;
 }
 
-li a {
-    
+.nav li a {
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -19,7 +19,7 @@ li a {
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
+.nav li a:hover {
     background-color: #111;
 }
 
