--- a/src/components/journalDetail.css
+++ b/src/components/journalDetail.css
@@ -9,7 +9,7 @@
     padding: 10px;
 }
 
-.fa-plus {
+.fa-minus {
     margin: 5px;
     float: left;
     transition: all .2s ease-in-out;
@@ -48,7 +48,5 @@
 
 li {
     list-style: none;
-    font-weight: bold;
-    margin: 10px;
-    
+    font-weight: bold;  
 }
