--- a/src/components/journalListView.css
+++ b/src/components/journalListView.css
@@ -1,14 +1,14 @@
+
 .journalDate {
-    border: 1px solid black;
-    border-top: none;
+    border: none;
     width: 85%;
     margin: auto;
     text-align: center;
     
 }
 
-h3 {
-    display: inline-block;
+.journalDate h3 {
+    margin: 5px;
 }
 
 .fa-plus {
@@ -36,8 +36,10 @@ h3 {
 .listViewMenu {
     width: 85%;
     height: 2rem;
-    margin: auto;
+    margin: 10px auto;
     border: 1px solid black;
     background-color: turquoise;
+
+
 }
 
