--- a/src/components/journalListView.css
+++ b/src/components/journalListView.css
@@ -1,10 +1,12 @@
+.journalListView {
+    padding-left: 0;
+}
 
 .journalDate {
     border: none;
     width: 85%;
     margin: auto;
-    text-align: center;
-    
+    text-align: center;   
 }
 
 .journalDate h3 {
@@ -39,7 +41,5 @@
     margin: 10px auto;
     border: 1px solid black;
     background-color: turquoise;
-
-
 }
 
