--- a/src/components/journalListView.css
+++ b/src/components/journalListView.css
@@ -1,83 +1,51 @@
-/* .journalListView {
-    padding-left: 0;
+ul {
+    list-style: none;  
 }
 
-.journalDate {
-    border: none;
-    width: 85%;
-    margin: auto;
-    text-align: center;   
-}
-
-.journalDate h3 {
-    margin: 5px;
-}
-
-.fa-plus {
-    margin: 5px;
-    float: left;
-    transition: all .2s ease-in-out;
-}
-
-.fa-trash-alt {
-    margin: 5px;
+.fa-trash-alt, .fa-edit{
+    
     float: right;
     transition: all .2s ease-in-out;
 }
 
-.fa-edit {
-    margin: 5px;
-    float: right;
-    transition: all .2s ease-in-out;
+#icon {
+    margin: 15px;
+    margin-bottom: 0;
 }
 
-#icon:hover {
-    transform: scale(1.1);
-}
-
-.listViewMenu {
+.journalListView {
     width: 85%;
-    height: 2rem;
-    margin: 10px auto;
-    border: 1px solid black;
-    background-color: turquoise;
-} */
-
-
-.container {
-    width: 80%;
-    max-width: 600px;
+    max-width: 800px;
     margin: 50px auto;
   }
-  
-  li.listView {
+  /* li.listViewMenuis-closed:before {
+    content: '\f055';;
+  } */
+  li.listViewMenu{
+    list-style: none;
+    margin-bottom: 2px;
     width: 100%;
     background-color: whitesmoke;
     border: none;
     outline: none;
     text-align: left;
-    padding: 15px 20px;
+    
     font-size: 18px;
     color: #444;
     cursor: pointer;
     transition: background-color 0.2s linear;
   }
   
-  li.listView:after {
+  /* li.listView:after {
     content: '\f055';
     font-family: "fontawesome";
     font-size: 14px;
     float: right;
-  }
+  } */
   /* take a second look at this to ensure it is working */
-  li.listViewMenu.detail:after {
+  /* li.listViewMenuis-open:before {
     content: '\f056';
-  }
-  
-  li.listViewMenu:hover, li.listViewMenu.is-open {
-    background-color: #ddd;
-  }
-  
+  } */
   .journalContent {
     background-color: white;
     border-left: 1px solid whitesmoke;
@@ -86,4 +54,39 @@
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-in-out;
+  }
+  
+  li.listViewMenu.is-closed:hover, li.listViewMenu.is-open {
+    background-color: #ddd;
+  }
+  
+  li.listViewMenu.is-closed .journalContent {
+    
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-in-out;
+  }
+
+  li.listViewMenu.is-open .journalContent {
+    list-style: none;
+    margin-bottom: 2px;
+    outline: none;
+    text-align: left;
+    padding: 15px 20px;
+    font-size: 18px;
+    color: #444;
+    cursor: pointer;
+    max-height: none;
+  }
+
+  li.listViewMenu.is-open .fa-chevron-down {
+    transition: 0.4s;
+    transform: rotateX(180deg);
+  }
+
+  .viewEntry h3 {
+    text-align: center;
+    display: block;
+    margin: 0;
+    padding-bottom: 30px;
   }
