--- a/src/components/loginPage.css
+++ b/src/components/loginPage.css
@@ -24,7 +24,7 @@ input {
 }
 
 html {
-    background: linear-gradient(to bottom right, #21897E, #66DDCB);
+    background: linear-gradient(to bottom right, #24968B, #70F4E0);
 }
 
 button, a {
