--- a/src/components/emojiScale.css
+++ b/src/components/emojiScale.css
@@ -1,7 +1,7 @@
 .emoji {
     height: 40px;
     width: 40px;
-    margin: 0 5px;
+    margin: 0 10px;
     border-radius: 50%;
     transition: all .2s ease-in-out;
 }
@@ -25,7 +25,7 @@
 
 .emojiSelect {
     padding: 5px 0;
-    margin: 10px;
+    margin-bottom: 20px;
 }
 
 
