--- a/src/components/journalForm.css
+++ b/src/components/journalForm.css
@@ -1,19 +1,45 @@
 .journalForm {
-    border: 1px solid black;
-    width: 30%;
-    text-align: center;
+    border: 1px solid grey;
+    width: 40%;
     padding: 30px;
     margin: 50px;
+    background-color: white;
+    border-radius: 2%;
 }
 
-.journalForm input {
-    width: 100%;
-    margin: 10px;
+label{
+    font-family: 'Shadows Into Light';
+    font-size: 22px;
+    letter-spacing: 1px;
 }
 
-label {
-    padding: 2px;
+.journalForm h1 {
+    text-align: center;
 }
+
+.field input {
+    width: 80%;
+    margin-bottom: 30px;
+    padding: 5px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: .5px solid lightgray;
+    font-size: 16px;
+    font-style: italic;
+}
+
+.field input:focus {
+   width: 95%; 
+   font-size: 20px;
+   border-bottom: 1.5px solid teal;
+   color: black;
+   outline: 0;
+   transition: 0.2s ease-in-out;
+}
+
+
+
 
 
 
