--- a/src/components/App.css
+++ b/src/components/App.css
@@ -27,7 +27,7 @@
   text-decoration: none;
   margin: 10px auto;
   width: 100px;
-  background: linear-gradient(to bottom right, #24968B, #70F4E0);
+  background: linear-gradient(to bottom right, rgb(51, 189, 175), rgb(82, 240, 100));
   padding: 15px;
   text-align: center;
   border-radius: 50px;
@@ -42,7 +42,7 @@ button {
 }
 
 body {
-  background: linear-gradient(to right, #24968B, #70F4E0);
+  background: linear-gradient(to bottom right, rgb(51, 189, 175), rgb(82, 240, 145));
   height: 100%;
 }
 
