added grid layout to landing page to help organize content

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -22,7 +22,7 @@
   font-size: large;
 }
 
-.auth, button {
+.button, button {
   display: inline-block;
   text-decoration: none;
   margin: 10px auto;
@@ -35,10 +35,6 @@
   font-weight: bold;
   font-size: 14px;
   border: none;
-}
-
-button {
-  width: 130px;
 }
 
 body {
