--- a/src/components/landingPage.css
+++ b/src/components/landingPage.css
@@ -1,5 +1,3 @@
-
-
 .registrationForm {
     padding: 5rem;
     text-align: center;
@@ -34,26 +32,30 @@
 }
 
 .howItWorks {
-    border: 1px solid aliceblue;
-    background-color: aliceblue;
-    padding: auto;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-gap: 10px;
+    justify-content: space-evenly;
+    padding: 20px;
     text-align: center;
 }
-.howItWorks h2 {
+.landingPage h2 {
     font-size: 2rem;
     text-decoration: underline;
-}
-.howItWorks li {
-    font-size: 1.25rem;
-    padding: 1rem;
+    text-align: center;
 }
 
 .howItWorks i {
     font-size: 30px;
 }
 
-ul.howItWorks  {
-    padding: 0;
-    width: 50%;
-    margin: auto;
+.howItWorksPoint {
+    width: 100%;
+}
+
+.authButtons {
+    width: 30%;
+    display: grid;
+    grid-template-columns: auto auto;
+    margin: 5px auto;
 }
