--- a/src/components/loginPage.css
+++ b/src/components/loginPage.css
@@ -1,4 +1,4 @@
-.home h2 {
+.login h2 {
     text-align: center;
 }
 
@@ -7,13 +7,14 @@
     text-align: center;
 }
 
+
 input {
     padding: 2px;
     width: 80%; 
     height: 20px;
 }
 
-.home {
+.login {
     margin: 50px auto;
     padding: 30px;
     width: 30%;
@@ -30,3 +31,4 @@ html {
 button, a {
     display: inline;
 }
+
