--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,32 +2,13 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
 
 .button, button {
   display: inline-block;
   text-decoration: none;
   margin: 10px auto;
   width: 100px;
-  background: linear-gradient(to bottom right, rgb(51, 189, 175), rgb(82, 240, 100));
+  background-color:rgb(51, 189, 175);
   padding: 15px;
   text-align: center;
   border-radius: 50px;
@@ -38,13 +19,9 @@
 }
 
 body {
-  background: linear-gradient(to bottom right, rgb(51, 189, 175), rgb(82, 240, 145));
+  
   height: 100%;
 }
 
 
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
