--- a/src/components/chart.css
+++ b/src/components/chart.css
@@ -6,6 +6,8 @@
 } 
 
 canvas {
+    padding: 30px;
     background-color: white;
     border-radius: 1%;
+    box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.577);
 }
