--- a/src/components/journalForm.css
+++ b/src/components/journalForm.css
@@ -5,6 +5,7 @@
     margin: 50px;
     background-color: white;
     border-radius: 2%;
+    box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.577);
 }
 
 label{
