--- a/src/components/loginPage.css
+++ b/src/components/loginPage.css
@@ -21,6 +21,7 @@ input {
     border: 0.5px solid grey;
     border-radius: 2%;
     background-color: white;
+    box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.577);
     
 }
 
