styled landing page

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -34,10 +34,12 @@
   font-weight: bold;
   font-size: 14px;
   border: none;
+  cursor: pointer;
+  
 }
 
 body {
-  
+  font-family: 'Roboto';
   height: 100%;
 }
 
