--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -11,7 +11,6 @@
 .nav li {
     display: inline;
     text-align: center;
-    margin: 10;
 }
 
 .nav li a {
@@ -22,9 +21,16 @@
     
 }
 
-.nav li a:hover {
-    color: greenyellow;
+.nav a:hover {
+    color: rgb(239, 237, 81);
+    cursor: pointer;
 }
+
+.nav li:hover {
+    color: rgb(239, 237, 81);
+    cursor: pointer;
+}
+
 
 .logout {
    clear: left;
