--- a/src/components/loginPage.css
+++ b/src/components/loginPage.css
@@ -33,3 +33,13 @@ button, a {
     display: inline;
 }
 
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+    
+    .login {
+        width: 60%;
+    }
+}
