--- a/src/components/chart.css
+++ b/src/components/chart.css
@@ -11,3 +11,14 @@ canvas {
     border-radius: 1%;
     box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.577);
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+    
+    .chart {
+        float: none;
+    }
+}
