--- a/src/components/emojiScale.css
+++ b/src/components/emojiScale.css
@@ -28,4 +28,15 @@
     margin-bottom: 20px;
 }
 
-
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+    
+    .emojiSelect {
+        text-align: center;
+        width: 70%;
+        margin: auto;
+    }
+}
