--- a/src/components/App.css
+++ b/src/components/App.css
@@ -35,11 +35,12 @@
   font-size: 14px;
   border: none;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
   
 }
 
 body {
-  font-family: 'Roboto';
+  font-family: 'Montserrat', sans-serif;
   height: 100%;
 }
 
