--- a/src/components/journalForm.css
+++ b/src/components/journalForm.css
@@ -14,7 +14,7 @@
 }
 
 label{
-    font-family: 'Shadows Into Light';
+    font-family: 'Merriweather', serif;
     font-size: 22px;
     letter-spacing: 1px;
 }
