--- a/src/components/journalListView.css
+++ b/src/components/journalListView.css
@@ -42,16 +42,6 @@ li.listViewMenu{
     transition: background-color 0.2s linear;
 }
 
-/* li.listView:after {
-content: '\f055';
-font-family: "fontawesome";
-font-size: 14px;
-float: right;
-} */
-/* take a second look at this to ensure it is working */
-/* li.listViewMenuis-open:before {
-content: '\f056';
-} */
 .journalContent {
     background-color: white;
     border-left: 1px solid whitesmoke;
@@ -77,7 +67,7 @@ li.listViewMenu.is-open .journalContent {
     text-align: left;
     padding: 15px 20px;
     font-size: 22px;
-    font-family: 'Shadows Into Light';
+    font-family: 'Merriweather', serif;
     color: #444;
     cursor: pointer;
     max-height: 800px;
@@ -97,7 +87,7 @@ li.listViewMenu.is-open .fa-chevron-down {
 }
 
 .label {
-    font-family: 'Roboto';
+    font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 24px;
     text-decoration: underline;
