--- a/src/components/loginForm.css
+++ b/src/components/loginForm.css
@@ -21,5 +21,5 @@ input:focus {
 
 .form-error {
     color: red;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Montserrat', sans-serif; 
 }
